# sqs-consumer-exercise

./: .dockerignore  CODEOWNERS  Dockerfile  Dockerfile.api  Dockerfile.processor  Dockerfile.producer  README.md  SLEEP_IMPROVEMENTS.md  catalog-info.yaml  docker-compose.scale.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_async_fix.py
.server/: run.sh  start.py
src/: __init__.py  main.py  process.py  schemas.py
src/api/: main.py  stats.py
src/processor/: main.py
src/shared/: config.py  redis_client.py  schemas.py
test/: conftest.py  test_api_main.py  test_fastapi_endpoints.py  test_integration.py  test_main.py  test_process.py  test_processor.py  test_redis_client.py  test_schemas.py  test_shared_config.py  test_shared_schemas.py  test_stats_service.py
